[CRNT-37127]: Fixed the layout issue of browser modeler msg box.
Bug: CRNT-37127

--- a/portal-common/src/main/resources/META-INF/xhtml/css/iPopupDialogStyle.css
+++ b/portal-common/src/main/resources/META-INF/xhtml/css/iPopupDialogStyle.css
@@ -33,7 +33,7 @@
 }
 
 .iPopupDialogContentArea {
-	width: 100%;
+	width: auto;
 	height: auto;
 	background-color: white;
 	padding-left: 25px;
